<?xml version="1.0" encoding="UTF-8"?>

<!--
 * See the NOTICE file distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This is free software; you can redistribute it and/or modify it
 * under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation; either version 2.1 of
 * the License, or (at your option) any later version.
 *
 * This software is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this software; if not, write to the Free
 * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-->

<resources>
    <string name="app_name" translatable="false">XWiki Authenticator</string>
    <string name="xwiki" translatable="false">XWiki</string>
    <string name="label" translatable="false">@string/xwiki</string>
    <string name="login_label" translatable="false">@string/log_in</string>

    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>

    <string name="logIn">Log in</string>

    <!-- edit -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_id">User Id (Required)</string>
    <string name="phone">Cell Phone</string>
    <string name="email">E-Mail</string>
    <string name="password">Password (Required)</string>
    <string name="confirm_password">Confirm Password (Required)</string>
    <string name="captcha_textview">Input the captcha</string>

    <!-- login Label username password server-->
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_server_label">Server</string>
    <string name="login_activity_port_label">Port</string>
    <string name="login_activity_ok_button" translatable="false">@string/signIn</string>
    <string name="login_activity_register_button" translatable="false">@string/signUp</string>
    <string name="sign_in_authenticating">Sign In…</string>
    <string name="sign_up_authenticating">Sign Up…</string>

    <!-- menu -->
    <string name="save">Save</string>
    <string name="menu_ok" translatable="false">@android:string/ok</string>
    <string name="dataSaver">Data Saver</string>

    <!--Activity label-->
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_sign_up" translatable="false">@string/signUp</string>
    <string name="title_activity_authorize">Authorize</string>
    <string name="title_activity_select_groups">Select Groups</string>
    <string name="title_activity_setting">Settings</string>

    <!--error msg-->
    <string name="error_invalid_server">This server address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_internet">Please, check the internet connection</string>

    <!--contacts.xml-->
    <string name="view_group_action_label">Show sample group details</string>

    <!--edit profile-->
    <string name="profile_action">XWiki profile</string>
    <string name="view_profile">Edit Contact</string>

    <!--grant permission activity-->
    <string name="authorize_activity_note">Please click to authorize the third-party app to access your account.</string>
    <string name="authorize_activity_package_label">Package Name</string>
    <string name="account_name">Account Name</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permission_button">Authorize</string>
    <string name="defaultServerUrl" translatable="false">https://www.xwiki.org/xwiki</string>
    <string name="login_sub_head">Login to your XWiki Instance.</string>
    <string name="learn_more_dialog">Learn More</string>
    <string name="log_in" translatable="false">@string/logIn</string>
    <string name="don_t_have_a_account">Don\'t Have a XWiki Account?</string>
    <string name="create_one">Create One</string>
    <string name="next">Next</string>
    <string name="about_version">About Version</string>
    <string name="version">Version 1.0</string>
    <string name="complete">Complete</string>
    <string name="cantGetAllUsers">Can\'t get all users, try again</string>
    <string name="cantGetGroups">Can\'t get groups</string>
    <string name="loginError">Wrong server URL or credentials</string>
    <string name="pleaseWait">Please, wait</string>
    <string name="error_invalid_email">Invalid E-Mail</string>
    <string name="userExists">User exists</string>
    <string name="serverAddress">Server address</string>
    <string name="synchronizationType">Sync type</string>
    <string name="syncTypeGetListErrorMessage">Something went wrong when we try to get table for current sync type</string>
    <string name="tryAgain">Try again</string>
    <string name="versionTemplate" formatted="false">Version %s</string>
    <string name="updateSuccess">Update successfully</string>
    <string name="haveNoPermission">You have no permission</string>
    <string name="authenticationError">Authentication error</string>
    <string name="xwikiAccount">XWiki Account</string>
    <string name="askToGrantPermissions">Please grant the permission in the app settings</string>
    <string name="signUpOfferMessage">Create XWiki Account to enjoy features like synchronization of contacts and provide credentials for other android apps</string>
    <string name="userName">User name</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="userContactInfo">User contact info</string>
    <string name="additionalInfo">Additional info</string>
    <string name="company">Company</string>
    <string name="note">Note</string>
    <string name="wrongEmail">Email must look like "it-is@email-example.proof"</string>
    <string name="wrongPhone">Phone must look like "+123-(456)-789"</string>
    <string name="checkErrors">Check errors</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="success">Success</string>
    <string name="syncContactInfoWithServer">Sync contact info with server</string>
    <string name="cantSyncContact">Can\'t sync contact data with server. It will be synchronized later by system</string>
    <string name="prohibitedAction">Check that you have necessary permissions</string>
    <string name="editXWikiContactInfo">Edit XWiki contact info</string>
    <string name="unchangedSettings">Nothing to save: settings was not changed</string>
    <string name="error">Error</string>
    <string name="empty_notifications">No Notifications Found</string>
    <string name="experimental_feature">This page is currently in experimental stage </string>

    <!--choose account-->
    <string name="chooseAccount">Choose an account</string>
    <string name="anotherAccount">Use another account</string>
    <string name="accounts">Accounts</string>
    <string name="xwikiCredentialShare">To continue, XWiki will share your name, email address and profile picture with the requesting app</string>

    <!--sync settings-->
    <string name="syncAccount">Sync Account</string>

    <!--list item group-->
    <string name="lastUpdateInfo">Last update:2015.06.03</string>
    <string name="creatorXwiki">creator:xwiki</string>
    <string name="admin">Admin</string>

    <!--viewflipper signin-->
    <string name="chooseLoginMethod">Choose the login method</string>
    <string name="continueWith">Or continue with</string>
    <string name="openIdConnect">OpenID Connect</string>

    <!--select setting-->
    <string-array name="select_groups_array">
        <item>Sync All The Users</item>
        <item>Sync The Selected Groups</item>
        <item>Don\'t Sync</item>
    </string-array>

    <array name="swipeRefreshColors">
        <item>@android:color/holo_blue_light</item>
        <item>@android:color/holo_green_light</item>
        <item>@android:color/darker_gray</item>
    </array>
</resources>
