<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginLeft="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@color/shimmerBackground"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:textSize="@dimen/textDefaultMediumSize"
        tools:text="@string/admin" />

    <TextView
        android:id="@+id/version"
        android:layout_width="@dimen/shimmer_user_version"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupName"
        android:layout_alignStart="@id/groupName"
        android:layout_alignLeft="@id/groupName"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:background="@color/shimmerBackground"
        tools:text="@string/creatorXwiki" />

    <TextView
        android:id="@+id/lastModifiedTime"
        android:layout_width="@dimen/shimmer_last_updated_time"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/version"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/marginMedium"
        android:layout_marginRight="@dimen/marginMedium"
        android:background="@color/shimmerBackground"
        tools:text="@string/lastUpdateInfo" />

</RelativeLayout>
