<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/scroll_view_margin"
        android:layout_marginRight="@dimen/scroll_view_margin"
        android:layout_marginTop="@dimen/scroll_view_margin"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_padding_bottom"
            android:paddingLeft="@dimen/layout_padding_left_right"
            android:paddingRight="@dimen/layout_padding_left_right"
            android:paddingTop="@dimen/layout_padding_top">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/xwiki_logo"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_sub_head"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more_dialog"
                    android:onClick="next"
                    android:id="@+id/learn_more"
                    android:textColor="@color/primary_dark"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_server_label"
                android:textSize="@dimen/head_text_size"
                android:layout_marginTop="20dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <EditText
                android:id="@+id/accountServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minWidth="@dimen/edittext_min_width"
                android:scrollHorizontally="true"
                android:text="@string/server_url"
                android:textColor="@android:color/black" />
            <Button
                android:layout_weight="1"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/next"
                android:layout_marginTop="@dimen/button_margin_top"
                android:onClick="doPrevious"
                android:layout_gravity="end"
                android:backgroundTint="@color/next_button_color"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>