<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/first_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/last_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:maxLines="1"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/cell_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:maxLines="1"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
